Some files bounce back and forth between 'packing BVH nodes' and 'Copying Transforms to Device' #41532

Closed
opened 2014-08-21 19:57:05 +02:00 by bassam kurdali · 6 comments
Member

System Information
Fedora 20 GNU Linux 64 bit on Intel CPU (6 core I7) nvidia GPU, using CPU rendering

Blender Version
Broken: Current Git 2e5e1e2
Worked: previous release

Short description of error
When going to rendered mode, some files seem to loop between those two steps mentioned in the title, and not actually display anything
Exact steps for others to reproduce the error
1- Download the file http://urchn.org/misc/a2s40lightpacked.blend
2- Open in Current Git Master. You don't need to auto-run python or any non-default settings to see the problem.
3- Change the view to rendered
4- you should see it cycle in the headers between packing BVH nodes and Copying Transforms to Device

**System Information** Fedora 20 GNU Linux 64 bit on Intel CPU (6 core I7) nvidia GPU, using CPU rendering **Blender Version** Broken: Current Git 2e5e1e2 Worked: previous release **Short description of error** When going to rendered mode, some files seem to loop between those two steps mentioned in the title, and not actually display anything **Exact steps for others to reproduce the error** 1- Download the file http://urchn.org/misc/a2s40lightpacked.blend 2- Open in Current Git Master. You don't need to auto-run python or any non-default settings to see the problem. 3- Change the view to rendered 4- you should see it cycle in the headers between packing BVH nodes and Copying Transforms to Device
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Sergey Sharybin was assigned by bassam kurdali 2014-08-21 19:58:06 +02:00
Author
Member

Note: if you go to the Passes area of the Scene Properties Editor, and click around on the passes, it will stop 'dithering' and start rendering

Second Note: this happens for me both on my own build and a buildbot build I downloaded yesterday.

Third note: it is a recent occurance - it was not happening for me only a week or so ago, using git from that time.

Note: if you go to the Passes area of the Scene Properties Editor, and click around on the passes, it will stop 'dithering' and start rendering Second Note: this happens for me both on my own build and a buildbot build I downloaded yesterday. Third note: it is a recent occurance - it was not happening for me only a week or so ago, using git from that time.

This issue was referenced by 2a44844870

This issue was referenced by 2a448448702a1805a9d249f1a49b5f886feb146c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2a44844870.

Closed by commit 2a44844870.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41532
No description provided.