Fix T41532: Some files bounce back and forth between 'packing BVH nodes' and 'Copying Transforms to Device'

This was originally caused by a6ae12a where i didn't foresee unclear distinguishing
between empty and non-synced meshes will give issues for the viewport. They're the
same for final rendering, but for viewport we need to be accurate here.